--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ hs_err_pid*
 *.sublime-workspace
 
 # IDE - VSCode
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
