--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "ng2-file-upload": "^1.3.0",
     "core-js": "^2.4.1",
     "node-uuid": "^1.4.8",
     "rxjs": "^5.5.2",
@@ -47,6 +48,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng2-drag-drop": "^3.0.2",
+    "ng2-file-upload": "^1.3.0",
     "protractor": "~5.1.2",
     "sockjs-client": "^1.1.4",
     "stompjs": "^2.3.3",
