--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url = jdbc:postgresql://localhost:4396/postgres
 spring.datasource.username = postgres
-spring.datasource.password = 123456
+spring.datasource.password = root
 spring.datasource.driver-class-name = org.postgresql.Driver
 
 spring.jpa.properties.hibernate.hbm2ddl.auto = update
