--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,9 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
-    "ng2-file-upload": "^1.3.0",
+    "angular2-jwt": "^0.2.3",
     "core-js": "^2.4.1",
+    "ng2-file-upload": "^1.3.0",
     "node-uuid": "^1.4.8",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
